--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,5 +39,9 @@ dependencies {
 
     implementation 'com.android.volley:volley:1.1.1'
 
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
     compile 'com.squareup.picasso:picasso:2.5.2'
 }
